# FunWithQt18n

./: CMakeLists.txt  QtSandbox_en_CA.ts  QtSandbox_fr_CA.ts  README.md  main.cpp  mainwindow.ui
